[project]
name = "async-tls"
version = "0.0.1"
description = "Async fork of noble_tls"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dave van Rijn Development", email = "develop@davevanrijn.nl" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/Dave-van-Rijn-Development/async-tls"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"